# oolang

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  webpack.config.js
.github/workflows/: release.yml  rust.yml
examples/: add.oo  echo.oo  fibonacci.oo  multiply.oo  multiply.txt
interpreter/: Cargo.toml
interpreter/examples/: add.txt  multiply.txt  power-of-2.txt
interpreter/src/: instruction.rs  lib.rs  main.rs  test.rs  vm.rs
public/: index.html
src/: index.jsx  instruction.rs  lib.rs  main.rs  test.rs  vm.rs
