[package]
name = "OOLANG"
version = "0.1.1"
edition = "2021"
authors = ["Joey Harrison <Joeyh021@icloud.com>"]
repository= "https://github.com/RNM-Enterprises/oolang"
readme = "README.md"
license = "MIT"
rust-version = "1.58"
description="An esoteric stack-based programming language, where all instructions are different variations of the character 'O'" 
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.9.0"

[lib]
name = "oolang"
path = "src/lib.rs"

[[bin]]
name = "oorun"
path = "src/main.rs"